# fpo-requester-near

./: Cargo.toml  README.md
res/: near_fpo.wasm  requester.wasm
scripts/: build.sh  deploy_requester.sh  get_request.sh  oracle_request.sh  remove.sh  rerun.sh  reset_account.sh
src/: fungible_token_handler.rs  lib.rs
tests/sim/: main.rs
